# backend/routes/routes.go
@@ -29,7 +29,8 @@ func setupV1Routes(app *fiber.App) {
 	v1.Post("/user/logout", controllers.UserLogout)
 	v1.Post("/user/change-password", controllers.UserChangePassword)
 
-	v1.Post("/user/reset-password", controllers.UserResetPassword)
+	v1.Post("/user/reset-password", controllers.UserResetPasswordRequest)
+	v1.Post("/user/reset-password/:token", controllers.UserResetPassword)
 	v1.Get("/user/favourites", controllers.UserGetFavourites)
 	v1.Post("/user/favourites", controllers.UserAddFavourite)
 
